--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=123456
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bd_bootcamp_quarkus
+
+quarkus.rest-client."com.nttd.ms.pago.credito.client.GastoCreditoClient".url= http://localhost:8086
